@@ -1,3 +1,8 @@
+2016-02-27  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * gpasm/directive.c, gputils/gpdasm.c, libgputils/gpcofflink.c:
+    Patch: #66 C89 style comments to prevent warnings 
+    Tanks to Diego Herranz.
+
 2016-02-22  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * doc/gputils.lyx, gpasm/gpasm.c, gpasm/gpasm.h.in, gpasm/scan.l,
     New constant: __WHILE_LOOP_COUNT_MAX
